log
Thu 16 May 2024 01:07:23 AM UTC: 
 tests:  0|5
total_score: 0/70
1425c0d
Thu 16 May 2024 01:26:16 AM UTC: 
 sudoku.c | 20 +++++++++++++++++++-
 1 file changed, 19 insertions(+), 1 deletion(-)
test.c: In function ‘get_adj_nodes’:
test.c:245:5: error: ‘main’ is normally a non-static function [-Werror=main]
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:262:1: error: expected declaration or statement at end of input
  262 | }
      | ^
In file included from test.c:5:
sudoku.c:55:7: error: unused variable ‘aux’ [-Werror=unused-variable]
   55 |   int aux; //AUXILIAR PARA EL INTERCAMBIO DE VALORES
      |       ^~~
test.c:263: error: control reaches end of non-void function [-Werror=return-type]
At top level:
test.c:245:5: error: ‘main’ defined but not used [-Werror=unused-function]
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:7:8: error: ‘_strdup’ defined but not used [-Werror=unused-function]
    7 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
9f4afbd
Thu 16 May 2024 01:27:11 AM UTC: 
 sudoku.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  2|4
total_score: 15/70
0f4b463
Thu 16 May 2024 03:05:05 AM UTC: 
 sudoku.c | 13 ++++++++++++-
 1 file changed, 12 insertions(+), 1 deletion(-)
 tests:  5|3
total_score: 35/70
1536f3f
Thu 16 May 2024 03:06:20 AM UTC: 
 sudoku.c | 12 +++++++-----
 1 file changed, 7 insertions(+), 5 deletions(-)
In file included from test.c:5:
sudoku.c:60:3: error: expected identifier or ‘(’ before ‘}’ token
   60 |   }
      |   ^
sudoku.c:61:3: error: expected identifier or ‘(’ before ‘return’
   61 |   return 1;
      |   ^~~~~~
sudoku.c:62:1: error: expected identifier or ‘(’ before ‘}’ token
   62 | }
      | ^
sudoku.c: In function ‘is_valid’:
sudoku.c:59:5: error: control reaches end of non-void function [-Werror=return-type]
   59 |     }
      |     ^
cc1: all warnings being treated as errors
Compilation failed
ab35b1b
Thu 16 May 2024 03:06:44 AM UTC: 
 sudoku.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
 tests:  5|3
total_score: 35/70
a55bb4b
